--- a/client/public/index.html
+++ b/client/public/index.html
@@ -24,7 +24,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-  <title>React App</title>
+  <title>Online Warrior Classic</title>
 </head>
 
 <body>
